--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -8,6 +8,12 @@
         },
         "mobileSettings": {
             "enableS1EncryptedStoragePref2": false
+        },
+        "communitiesSettings": {
+            "enableNetworksEnabled": true
+        },
+        "experienceBundleSettings": {
+            "enableExperienceBundleMetadata": true
         }
     }
 }
